fixed text wrapping issue

--- a/movie-quotes/styles.css
+++ b/movie-quotes/styles.css
@@ -31,7 +31,7 @@ hr{
 }
 
 tr{
-    height: 60px;
+    max-height: 60px;
 }
 
 td{
